phpmyadm/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: qhoa83/php-apache
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
        - containerPort: 80
          name: phpmyadmin
        lifecycle:
          postStart:
            exec:
              command: ["git", "clone", "https://github.com/qhoa/code.git", "phymyadmin", "/app"]
