phpmyadm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbadm-web
spec:
  selector:
    app: phpmyadmin
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
